--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     implementation project(path: ':PrivateServer')
+    implementation project(path: ':NetReceiver')
     //    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.4'
 //    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.4'
 //    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.4'
