--- a/settings.gradle
+++ b/settings.gradle
@@ -74,7 +74,8 @@ include ':AppStatusLib', ':ToolUtilsLib', ':FragmentManager', ':AppCompress',
         ':AppMediaStore',  ':AppScreenLib', ':BaseVpAdapter', ':ImageToolLib',
         ':AppHandlerLib', ':FileIoHelper', ':ZipFileLib', ':NetWorkLib', ':AppContextLib',
         ':AppWiFiLib', ':UriAndUrlLib', ':AppGrayLib', ':AppCallStatus', ':AppFastSp',
-        ':ZipFileLib', ':SmEncryptLib', ':AppClickHelper', ':DataCloneLib', ':NetReceiver'
+        ':ZipFileLib', ':SmEncryptLib', ':AppClickHelper', ':DataCloneLib', ':NetReceiver',
+        ':NetSettingLib'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ApplicationLib').projectDir = new File('CommonLib/ApplicationLib')
@@ -118,7 +119,7 @@ project(':SmEncryptLib').projectDir = new File('CommonLib/SmEncryptLib')
 project(':AppClickHelper').projectDir = new File('CommonLib/AppClickHelper')
 project(':DataCloneLib').projectDir = new File('CommonLib/DataCloneLib')
 project(':NetReceiver').projectDir = new File('CommonLib/NetReceiver')
-
+project(':NetSettingLib').projectDir = new File('CommonLib/NetSettingLib')
 
 
 
