--- a/AppWebView/src/main/AndroidManifest.xml
+++ b/AppWebView/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
     package="com.ycbjie.ycwebview">
 
     <!-- 网络 -->
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
