--- a/WidgetLib/StatusBarLib/build.gradle
+++ b/WidgetLib/StatusBarLib/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["material"])
-    implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
 }
 
 
