--- a/AppMvx/build.gradle
+++ b/AppMvx/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation rootProject.ext.dependencies["recyclerview"]
     //其他
 //    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':ToastUtils')
