--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     implementation(rootProject.ext.dependencies["constraintlayout"])
     implementation(rootProject.ext.dependencies["recyclerview"])
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.8'
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.8'
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.9'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.9'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation project(path: ':AppUpdateLib')
     implementation project(path: ':KeyEventLib')
@@ -52,7 +52,7 @@ dependencies {
     implementation project(path: ':AnimBusiness')
 
     //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.8'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.9'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(':ThreadPoolLib')
     implementation project(':EasyExecutor')
@@ -60,5 +60,23 @@ dependencies {
     implementation project(':InterceptorTime')
 //    implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
+
+
+    implementation 'com.github.yangchong211.YCToolLib:InterceptorTime:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:SocketIoLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:AppProcessLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:WebSocketLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:CountTimerLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:AutoCloserLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:AppTraceTool:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:ZxingServerLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:ZXingCodeLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:LocaleHelperLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:LooperThread:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:TransitionHelper:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:NtpTimeLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:LongAliveLib:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:AppTraceTool:1.0.8'
+    implementation 'com.github.yangchong211.YCToolLib:SerialTaskLib:1.0.8'
 }
 
