--- a/ToolLib/LongAliveLib/build.gradle
+++ b/ToolLib/LongAliveLib/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["core"])
-    api project(path: ':AppCommonInter')
+//    api project(path: ':AppCommonInter')
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.9'
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
