--- a/WidgetLib/BannerViewLib/build.gradle
+++ b/WidgetLib/BannerViewLib/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':AppHandlerLib')
+    //handler包装库
+    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.4.9'
 }
