--- a/WidgetLib/SwipeBackLib/build.gradle
+++ b/WidgetLib/SwipeBackLib/build.gradle
@@ -20,5 +20,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
 }
