--- a/CommonLib/NetTestLib/build.gradle
+++ b/CommonLib/NetTestLib/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation rootProject.ext.dependencies["okhttp"]
     implementation project(path: ':AppContextLib')
+    implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
