--- a/AppMvx/build.gradle
+++ b/AppMvx/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
     implementation rootProject.ext.dependencies["recyclerview"]
+    //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //其他
 //    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':ToastUtils')
