--- a/ServerLib/HttpServer/build.gradle
+++ b/ServerLib/HttpServer/build.gradle
@@ -22,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -36,6 +40,8 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
     //网络判断库
     implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.9'
+    //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':NetInterceptor')
     //implementation project(path: ':NetWorkLib')
