--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -92,5 +92,6 @@ dependencies {
     implementation project(path: ':ToolUtilsLib')
     api project(path: ':BusinessInterface')
     implementation project(path: ':ApplicationLib')
+    implementation project(path: ':LooperThread')
     implementation project(path: ':AppCoordinatorLayout')
 }
