--- a/ServerLib/HeartBeatServer/src/main/AndroidManifest.xml
+++ b/ServerLib/HeartBeatServer/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.heartbeat">
 
+    <application>
+        <service android:name="com.yc.heartbeatserver.HeartService"/>
+    </application>
+
 </manifest>
