--- a/ServerLib/GrpcServer/build.gradle
+++ b/ServerLib/GrpcServer/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation rootProject.ext.dependencies["gson"]
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
-    implementation 'com.github.yangchong211.YCCommonLib:DataCloneLib:1.4.9'
+    api 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
+    api 'com.github.yangchong211.YCCommonLib:DataCloneLib:1.4.9'
     //protobuf
     implementation 'io.grpc:grpc-okhttp:1.33.0'
     implementation 'io.grpc:grpc-protobuf-lite:1.33.0'
