--- a/ToolLib/InterceptorTime/build.gradle
+++ b/ToolLib/InterceptorTime/build.gradle
@@ -24,6 +24,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    //制作jar包
+    task makeJar(type: Copy) {
+        //删除存在的
+        delete 'build/libs/mysdk.jar'
+        //设置拷贝的文件
+        from('build/intermediates/aar_main_jar/release/')
+        //打进jar包后的文件目录
+        into('output/libs/')
+        //将classes.jar放入build/libs/目录下 //include ,exclude参数来设置过滤 //（我们只关心classes.jar这个文件）
+        include('interceptortime.jar')
+        //重命名
+        rename('interceptortime.jar', 'mysdk.jar')
+    }
+    makeJar.dependsOn(build)
 }
 
 dependencies {
