--- a/AppLeet/build.gradle
+++ b/AppLeet/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':LibraryLayer')
-    implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
     implementation project(path: ':MonitorPhone')
 }
