--- a/ToolLib/UsbInterface/build.gradle
+++ b/ToolLib/UsbInterface/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.9'
 }
