--- a/ToolLib/SerialPort/src/main/AndroidManifest.xml
+++ b/ToolLib/SerialPort/src/main/AndroidManifest.xml
@@ -2,4 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.serialport">
 
+
+    <application>
+        <receiver android:name="com.yc.serialport.UsbReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
+                <action android:name="android.intent.action.MEDIA_REMOVED" />
+                <data android:scheme="file" />
+            </intent-filter>
+        </receiver>
+    </application>
+
 </manifest>
