--- a/ToolLib/SqlLiteLib/src/main/AndroidManifest.xml
+++ b/ToolLib/SqlLiteLib/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.sqllitelib">
 
+
+    <application>
+        <activity android:name=".test.SqlLiteActivity"/>
+    </application>
+
 </manifest>
