--- a/MonitorLib/MonitorFpsLib/src/main/AndroidManifest.xml
+++ b/MonitorLib/MonitorFpsLib/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.catonhelperlib">
 
-    <application>
-        <activity android:name="com.yc.catonhelperlib.PerformanceActivity"/>
-    </application>
+    <application></application>
 
 </manifest>
